Regression(r254389?) navigator.languages returns all lowercase languages for ports using CF https://bugs.webkit.org/show_bug.cgi?id=225461

Reviewed by Darin Adler.

Source/WTF:

Stop lowercasing the languages returned by navigator.language / navigator.languages
as this does not match the specification [1][2] or other Web browsers. The proper format is
'en-US', not 'en-us'.

[1] https://html.spec.whatwg.org/#dom-navigator-language
[2] https://tools.ietf.org/html/bcp47

* wtf/cf/LanguageCF.cpp:
(WTF::httpStyleLanguageCode):

Tools:

Update existing API tests to reflect behavior change.

* TestWebKitAPI/Tests/WebKit/OverrideAppleLanguagesPreference.mm:
(TEST):
(TEST_F):

LayoutTests:

Update existing tests to reflect behavior change.

* fast/text/international/system-language/navigator-language/navigator-language-en-GB-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-en-GB.html:
* fast/text/international/system-language/navigator-language/navigator-language-en-US-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-en-US.html:
* fast/text/international/system-language/navigator-language/navigator-language-en-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-en.html:
* fast/text/international/system-language/navigator-language/navigator-language-es-ES-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-es-ES.html:
* fast/text/international/system-language/navigator-language/navigator-language-es-MX-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-es-MX.html:
* fast/text/international/system-language/navigator-language/navigator-language-es-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-es.html:
* fast/text/international/system-language/navigator-language/navigator-language-fr-CA-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-fr-CA.html:
* fast/text/international/system-language/navigator-language/navigator-language-fr-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-fr.html:
* fast/text/international/system-language/navigator-language/navigator-language-hi-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-hi.html:
* fast/text/international/system-language/navigator-language/navigator-language-pt-BR-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-pt-BR.html:
* fast/text/international/system-language/navigator-language/navigator-language-pt-PT-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-pt-PT.html:
* fast/text/international/system-language/navigator-language/navigator-language-ru-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-ru.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-HK-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-zh-HK.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hans-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hans.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hant-HK-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hant-HK.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hant-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-zh-Hant.html:
* fast/text/international/system-language/navigator-language/navigator-language-zh-TW-expected.txt:
* fast/text/international/system-language/navigator-language/navigator-language-zh-TW.html:
* js/dom/navigator-language.html:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-en-US-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-en-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-es-ES-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-es-MX-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-es-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-fr-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-hi-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-pt-BR-expected.txt:
* platform/mac-catalina/fast/text/international/system-language/navigator-language/navigator-language-ru-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-en-US-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-en-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-es-419-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-es-ES-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-es-MX-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-es-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-fr-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-hi-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-ja-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-pt-BR-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-ru-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-zh-HK-expected.txt:
* platform/mac-mojave/fast/text/international/system-language/navigator-language/navigator-language-zh-Hant-HK-expected.txt:


Canonical link: https://commits.webkit.org/237424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277135 268f45cc-cd09-0410-ab3c-d52691b4dbfc